--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -12,6 +12,7 @@ $font-path: '../fonts';
 $font-defoult: 'Roboto', sans-serif;
 $font-size: 1.6rem;
 $font-family-secondary: 'Roboto Slab', sans-serif;
+$font-family-exclude: 'Architectural', sans-serif;
 $font-weight-defoult: 470;
 $font-size-defoult: 1.4rem;
 //* ------------------------------ [Font color] --------------------------------
