--- a/#src/scss/index.scss
+++ b/#src/scss/index.scss
@@ -54,7 +54,7 @@
 @import 'assets/audio-player';
 // todo --------------------------- layout -------------------------------------
 @import 'layouts/bem-block';
-@import 'layouts/header';
+// @import 'layouts/header';
 @import 'layouts/footer';
 // todo --------------------------- Pages --------------------------------------
 @import 'pages/page-main';
