--- a/#src/pug/pages/pages/about.pug
+++ b/#src/pug/pages/pages/about.pug
@@ -27,5 +27,5 @@ block page-content
 			block mobile-menu
 				._menu-float
 		block button 
-			._button#scrollButton
-				+iconfont('angle-down')
+			._aside#scrollButton
+				+iconfont('angle-down', '_button')
