--- a/#src/scss/section/setion-services.scss
+++ b/#src/scss/section/setion-services.scss
@@ -29,14 +29,14 @@
 		//! ------------------------------------------------------------------------
 		&::before {
 			content: '';
-			width: 100%;
+			// width: 100%;
 			height: 70%;
 			position: absolute;
 			top: 0;
 			left: 0;
 			z-index: -1;
-			border-radius: 50%;
-			@extend .gradient-title;
+			// border-radius: 50%;
+			// @extend .gradient-title;
 		}
 
 		&:nth-child(1) {
@@ -270,13 +270,14 @@
 
 	// .offer-container__title
 	&__title {
+		white-space: nowrap;
 		position: relative;
 		display: inline;
 		padding: 0 5rem 2rem;
 		margin-bottom: 6rem;
 		font: {
 			family: 'aa_neon', serif;
-			size: 3rem;
+			size: 5rem;
 			weight: normal;
 		}
 		text-align: center;
@@ -302,15 +303,15 @@
 
 		&::before {
 			content: '';
-			width: 100%;
+			// width: 100%;
 			height: 100%;
 			position: absolute;
 			top: 0;
 			left: 0;
 			z-index: -1;
-			border-radius: 50%;
+			// border-radius: 50%;
 			transform: translate(0, 10%);
-			@extend .gradient-title;
+			// @extend .gradient-title;
 		}
 
 		&::after {
