--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -9,7 +9,7 @@ prepend script
 	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/home-components.min.js")
 	script(defer="defer" type="text/javascript" src="@@webRoot/js/index.min.js") 
 block title
-	- var text='Студия зувукозаписи "Gusli" Обнинск' 
+	- var text='Студия звукозаписи "Gusli" Обнинск'
 
 block page-content
 	.page
@@ -25,7 +25,6 @@ block page-content
 							section._services 
 						block footer
 							._footer#footer
-					//- block mobile-menu
 				._menu-float 
 		block button 
 			._aside#scrollButton
