--- a/#src/pug/pages/pages/about.pug
+++ b/#src/pug/pages/pages/about.pug
@@ -23,7 +23,7 @@ block page-content
 							section._about
 							section._achievements
 						block footer
-							._footer 
+							._footer#footer
 			block mobile-menu
 				._menu-float
 		block button 
