--- a/#src/scss/about-style.scss
+++ b/#src/scss/about-style.scss
@@ -54,7 +54,7 @@
 // @import 'assets/audio-player';
 // todo --------------------------- layout -------------------------------------
 @import 'layouts/bem-block';
-@import 'layouts/header';
+//@import 'layouts/header';
 @import 'layouts/footer';
 // todo --------------------------- Pages --------------------------------------
 @import 'pages/page-bio';
@@ -68,5 +68,6 @@
 @import 'section/menu-float';
 @import 'section/section-about';
 @import 'section/section-achieve.scss';
+@import 'section/aboute-footer';
 
 // -----------------------------------------------------------------------------
