--- a/#src/scss/layouts/header.scss
+++ b/#src/scss/layouts/header.scss
@@ -35,7 +35,7 @@
 	}
 
 	&.with-border {
-		box-shadow: 0px 1px 10px #000;
+		box-shadow: 0 1px 10px #000;
 
 		&::before {
 			animation: fadeInGradient 0.7s ease-in-out forwards;
@@ -53,7 +53,6 @@
 		position: relative;
 		width: 100%;
 		z-index: 8;
-		position: relative;
 		@include flex-align-center-justify-space-between;
 		height: 10rem;
 	}
@@ -86,19 +85,20 @@
 			font-weight: 100;
 			font-family: $font-family-exclude;
 			transform: translateY(-7px);
-			text-shadow: 0px 0px 3px #000000;
+			text-shadow: 0 0 3px #000000;
 			opacity: 0.7;
 			color: #919191;
 
-			@include _425 {
-				font-size: 2.4rem;
+			@include _1024 {
+				font-size: 4rem;
+				transform: translateY(-5px);
 			}
 		}
 	}
 
 	// .header__logo
 	&__logo {
-		height: 5.3em;
+		//height: 5.3em;
 		width: 8.3rem;
 		// background: url('../../img/header/logo.png') center / contain no-repeat;
 		opacity: 0.9;
@@ -111,7 +111,7 @@
 		transition: all 0.9s ease 0s;
 		margin: 0 1.5rem;
 		text-transform: uppercase;
-		display: flex;
+
 		align-items: flex-start;
 		transform: translateY(7px);
 
