--- a/#src/scss/core/_mixins.scss
+++ b/#src/scss/core/_mixins.scss
@@ -12,281 +12,237 @@
 	}
 }
 
-@mixin flex-align-center {
-	display: flex;
-	align-items: center;
+//* ----------------------------------------------------------------------------
+@mixin screen-1920 {
+	@media screen and (max-width: 1920px) {
+		@content;
+	}
 }
 
-@mixin flex-align-end {
-	display: flex;
-	align-items: end;
+@mixin screen-1440 {
+	@media screen and (max-width: 1440px) {
+		@content;
+	}
 }
 
-@mixin flex-justify-center {
-	display: flex;
-	justify-content: center;
+@mixin screen-1140 {
+	@media screen and (max-width: 1140px) {
+		@content;
+	}
 }
 
-@mixin flex-align-center-justify-end {
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+@mixin screen-1024 {
+	@media screen and (max-width: 1024px) {
+		@content;
+	}
 }
 
-@mixin flex-align-center-justify-start {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-}
-
-@mixin flex-justify-space-between {
-	display: flex;
-	justify-content: space-between;
-}
-
-@mixin flex-justify-space-evenly {
-	display: flex;
-	justify-content: space-evenly;
-}
-
-@mixin flex-align-center-justify-center {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-@mixin flex-align-center-justify-space-evenly {
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
-}
-
-@mixin flex-align-center-justify-space-between {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-// -----------------------------------------------------------------------------
-@mixin _screen-960 {
+@mixin screen-960 {
 	@media screen and (max-width: 960px) {
 		@content;
 	}
 }
-@mixin _screen-690 {
+
+@mixin screen-920 {
+	@media screen and (max-width: 920px) {
+		@content;
+	}
+}
+
+@mixin screen-768 {
+	@media screen and (max-width: 768px) {
+		@content;
+	}
+}
+
+@mixin screen-690 {
 	@media screen and (max-width: 690px) {
 		@content;
 	}
 }
 
-@mixin _screen-490 {
+@mixin screen-490 {
 	@media screen and (max-width: 490px) {
 		@content;
 	}
 }
 
-@mixin _screen-920 {
-	@media screen and (max-width: 920px) {
+@mixin screen-425 {
+	@media screen and (max-width: 425px) {
 		@content;
 	}
 }
-@mixin _screen-1140 {
-	@media (max-width: 1140px) {
+
+@mixin screen-375 {
+	@media screen and (max-width: 375px) {
 		@content;
 	}
 }
-// -----------------------------------------------------------------------------
-@mixin _min-1140 {
+
+@mixin screen-320 {
+	@media screen and (max-width: 320px) {
+		@content;
+	}
+}
+//* ----------------------------------------------------------------------------
+@mixin min-1140 {
 	@media (min-width: 1140.99px) {
 		@content;
 	}
 }
 
-@mixin _min-1024 {
+@mixin min-1024 {
 	@media (min-width: 1024.99px) {
 		@content;
 	}
 }
 
-@mixin _min-920 {
+@mixin min-920 {
 	@media (min-width: 920.99px) {
 		@content;
 	}
 }
 
-@mixin _min-768 {
+@mixin min-768 {
 	@media (min-width: 768.98px) {
 		@content;
 	}
 }
 
-@mixin _min-690 {
+@mixin min-690 {
 	@media (min-width: 690.98px) {
 		@content;
 	}
 }
 
-@mixin _min-490 {
+@mixin min-490 {
 	@media (min-width: 490.99px) {
 		@content;
 	}
 }
-@mixin _min-425 {
+@mixin min-425 {
 	@media (min-width: 425.99px) {
 		@content;
 	}
 }
-@mixin _min-375 {
+@mixin min-375 {
 	@media (min-width: 375.99px) {
 		@content;
 	}
 }
 
-@mixin _min-320 {
+@mixin min-320 {
 	@media (min-width: 320.99px) {
 		@content;
 	}
 }
-// -----------------------------------------------------------------------------
-@mixin _1024 {
-	@media (max-width: 1024px) {
+
+//* ----------------------------------------------------------------------------
+@mixin minmax-1440-1920 {
+	@media (min-width: 1440.98px) and (max-width: 1920px) {
 		@content;
 	}
 }
 
-@mixin _920 {
-	@media (max-width: 920px) {
+@mixin minmax-490-1920 {
+	@media (min-width: 490.98px) and (max-width: 1920px) {
 		@content;
 	}
 }
 
-@mixin _768 {
-	@media (max-width: 768px) {
-		@content;
-	}
-}
-
-@mixin _690 {
-	@media (max-width: 690px) {
-		@content;
-	}
-}
-
-@mixin _490 {
-	@media (max-width: 490px) {
-		@content;
-	}
-}
-
-@mixin _425 {
-	@media (max-width: 425px) {
-		@content;
-	}
-}
-
-@mixin _375 {
-	@media (max-width: 375px) {
-		@content;
-	}
-}
-
-@mixin _320 {
-	@media (max-width: 320px) {
-		@content;
-	}
-}
-// -----------------------------------------------------------------------------
-@mixin _920-1170 {
+@mixin minmax-920-1170 {
 	@media (min-width: 920.98px) and (max-width: 1170px) {
 		@content;
 	}
 }
 
-@mixin _1024-1140 {
+@mixin minmax-1024-1140 {
 	@media (min-width: 1024px) and (max-width: 1140px) {
 		@content;
 	}
 }
 
-@mixin _690-1140 {
+@mixin minmax-690-1140 {
 	@media (min-width: 690.99px) and (max-width: 1140px) {
 		@content;
 	}
 }
 
-@mixin _920-1024 {
+@mixin minmax-920-1024 {
 	@media (min-width: 920.99px) and (max-width: 1024px) {
 		@content;
 	}
 }
 
-@mixin _490-1024 {
+@mixin minmax-490-1024 {
 	@media (min-width: 490.99px) and (max-width: 1024px) {
 		@content;
 	}
 }
 
-@mixin _768-920 {
+@mixin minmax-768-920 {
 	@media (min-width: 768.98px) and (max-width: 920px) {
 		@content;
 	}
 }
 
-@mixin _690-920 {
+@mixin minmax-690-920 {
 	@media (min-width: 690.98px) and (max-width: 920px) {
 		@content;
 	}
 }
 
-@mixin _490-920 {
+@mixin minmax-490-920 {
 	@media (min-width: 490.99px) and (max-width: 920px) {
 		@content;
 	}
 }
 
-@mixin _375-920 {
+@mixin minmax-375-920 {
 	@media (min-width: 375.98px) and (max-width: 920px) {
 		@content;
 	}
 }
 
-@mixin _320-920 {
+@mixin minmax-320-920 {
 	@media (min-width: 320.99px) and (max-width: 920px) {
 		@content;
 	}
 }
 
-@mixin _690-768 {
+@mixin minmax-690-768 {
 	@media (min-width: 690.99px) and (max-width: 768px) {
 		@content;
 	}
 }
 
-@mixin _490-690 {
+@mixin minmax-490-690 {
 	@media (min-width: 490.99px) and (max-width: 690px) {
 		@content;
 	}
 }
 
-@mixin _375-690 {
+@mixin minmax-375-690 {
 	@media (min-width: 375.98px) and (max-width: 690px) {
 		@content;
 	}
 }
 
-@mixin _375-490 {
+@mixin minmax-375-490 {
 	@media (min-width: 376px) and (max-width: 490px) {
 		@content;
 	}
 }
 
-@mixin _425-490 {
+@mixin minmax-425-490 {
 	@media (min-width: 425.98px) and (max-width: 490px) {
 		@content;
 	}
 }
 
-@mixin _320-690 {
+@mixin minmax-320-690 {
 	@media (min-width: 330.98px) and (max-width: 690px) {
 		@content;
 	}
 }
+//* ----------------------------------------------------------------------------
