--- a/#src/scss/assets/_burger-button.scss
+++ b/#src/scss/assets/_burger-button.scss
@@ -4,7 +4,7 @@
 	flex: 0;
 	left: 0;
 	transform: translateX(var(--mob-hidden-width));
-	@include _min-768 {
+	@include screen-768 {
 		display: none;
 	}
 	&__items {
