--- a/#src/scss/core/_modifiers.scss
+++ b/#src/scss/core/_modifiers.scss
@@ -1,4 +1,4 @@
-@include _min-920 {
+@include min-920 {
 	/* FLOW: RIGHT */
 	[data-tooltip] {
 		position: relative;
@@ -15,11 +15,9 @@
 		opacity: 0;
 		visibility: hidden;
 		transition: all 0.4s ease-in-out;
-		font: {
-			family: $font-defoult;
-			weight: 200;
-			size: 1.3rem;
-		}
+		font-family: $font-default;
+		font-weight: 200;
+		font-size: 1.3rem;
 		letter-spacing: 0.2em;
 		text-transform: uppercase;
 		z-index: 9;
@@ -32,7 +30,6 @@
 		border-right: 9px solid var(--font-color-active);
 		position: absolute;
 		z-index: 9;
-		// left: 110%;
 		margin-left: -20px;
 		bottom: 12%;
 		opacity: 0;
