--- a/#src/scss/index.scss
+++ b/#src/scss/index.scss
@@ -40,7 +40,9 @@
 [class*='icon-'] {
 	cursor: pointer;
 	height: 100%;
-	@include flex-align-center-justify-center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 [class*='_stretch'] {
@@ -54,7 +56,7 @@
 @import 'assets/audio-player';
 // todo --------------------------- layout -------------------------------------
 @import 'layouts/bem-block';
-// @import 'layouts/header';
+@import 'layouts/header';
 @import 'layouts/footer';
 // todo --------------------------- Pages --------------------------------------
 @import 'pages/page-main';
