--- a/#src/scss/layouts/footer.scss
+++ b/#src/scss/layouts/footer.scss
@@ -15,11 +15,6 @@
 		}
 	}
 
-	// .footer__info
-	&__info {
-		// margin: 0 2rem;
-	}
-
 	// .footer__contacts
 	&__contacts {
 		padding: 2rem 0;
@@ -35,15 +30,25 @@
 
 	&__item-services {
 		flex-wrap: nowrap;
+		display: flex;
+		align-items: center;
+
 		&:not(:last-child) {
 			margin-bottom: 2rem;
 		}
+
 		i {
 			display: block;
 			margin-right: 3rem;
 			width: 7rem;
 			height: 3.2rem;
 		}
+
+		span {
+			color: $gray;
+			font-size: 1.4rem;
+		}
+
 		[class*='icon-'] {
 			&::before {
 				cursor: pointer;
@@ -51,11 +56,6 @@
 				color: $gray;
 			}
 		}
-		span {
-			color: $gray;
-			font-size: 1.4rem;
-		}
-		@include flex-align-center;
 	}
 
 	// .footer__community
@@ -64,13 +64,15 @@
 			// .community__items
 			&__items {
 				padding: 5rem 2rem;
-
 				justify-content: space-between;
-				@include flex-align-center;
-				@include _768 {
-					padding-bottom: 12rem;
+				display: flex;
+				align-items: center;
+
+				@include screen-768 {
+					padding-bottom: 9rem;
 				}
-				@include _490 {
+
+				@include screen-490 {
 					flex-direction: column;
 					align-items: flex-start;
 					gap: 2rem;
@@ -112,8 +114,10 @@
 
 			// .community__icons
 			&__icons {
-				@include flex-align-center;
+				display: flex;
+				align-items: center;
 			}
+
 			// .community__link
 			&__link {
 				position: relative;
@@ -137,9 +141,13 @@
 	// .footer__help
 	&__help {
 		padding-bottom: 2rem;
+		color: $gray;
 		text-align: center;
 		font-size: 4.8rem;
-		color: $gray;
+		text-shadow: 3px 3px 10px #000;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 
 		i {
 			transition: scale 0.4s ease-in-out;
@@ -148,7 +156,7 @@
 			}
 
 			margin: 3rem;
-			@include _425 {
+			@include screen-425 {
 				margin: 3rem 2rem;
 			}
 
@@ -158,9 +166,7 @@
 					color: $neon-blue-dark;
 				}
 			}
-			text-shadow: 3px 3px 10px #000;
 		}
-		@include flex-align-center-justify-center;
 	}
 }
 
@@ -173,14 +179,16 @@
 		text-shadow: 2px 2px 4px #000;
 		padding: 0 2rem;
 
-		@include _768 {
+		@include screen-768 {
 			grid-template-columns: repeat(2, auto);
 			gap: 2rem;
 		}
-		@include _490 {
+
+		@include screen-490 {
 			width: 100%;
 		}
-		@include _425 {
+
+		@include screen-425 {
 			grid-template-columns: 1fr;
 		}
 	}
@@ -191,8 +199,9 @@
 		font:
 			1.8rem Roboto,
 			sans-serif;
+
 		&:nth-child(1) {
-			@include _425-490 {
+			@include minmax-425-490 {
 				grid-column: 1 / 3;
 			}
 		}
@@ -201,7 +210,8 @@
 		}
 
 		a {
-			@include flex-align-center;
+			display: flex;
+			align-items: center;
 			font-size: 1.4rem;
 		}
 
