--- a/#src/scss/layouts/header.scss
+++ b/#src/scss/layouts/header.scss
@@ -1,6 +1,3 @@
-@import '../core/mixins';
-@import '../core/variables';
-@import '../core/extend';
 .header {
 	position: relative;
 	width: 100%;
@@ -35,7 +32,7 @@
 	}
 
 	&.with-border {
-		box-shadow: 0px 1px 10px #000;
+		box-shadow: 0 1px 10px #000;
 
 		&::before {
 			animation: fadeInGradient 0.7s ease-in-out forwards;
@@ -50,12 +47,18 @@
 
 	// .header__container
 	&__container {
+		width: 100%;
+	}
+
+	// .header__content
+	&__content {
 		position: relative;
 		width: 100%;
 		z-index: 8;
-		position: relative;
-		@include flex-align-center-justify-space-between;
 		height: 10rem;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
 	}
 
 	// .header__column
@@ -64,44 +67,43 @@
 			display: flex;
 			align-items: flex-end;
 		}
-
-		@include _920 {
+		&:nth-child(2) {
+			transform: translateY(7px);
+		}
+		@include screen-920 {
 			&:nth-child(2) {
 				display: none;
-			}
-		}
-		@include flex-align-center;
-	}
-
-	// .header__text
-	&__text {
-		flex-direction: column;
-		text-transform: uppercase;
-		white-space: nowrap;
-		@include flex-align-center;
-
-		span {
-			line-height: 100%;
-			font-size: 41px;
-			font-weight: 100;
-			font-family: $font-family-exclude;
-			transform: translateY(-7px);
-			text-shadow: 0px 0px 3px #000000;
-			opacity: 0.7;
-			color: #919191;
-
-			@include _425 {
-				font-size: 2.4rem;
 			}
 		}
 	}
 
 	// .header__logo
 	&__logo {
-		height: 5.3em;
-		width: 8.3rem;
-		// background: url('../../img/header/logo.png') center / contain no-repeat;
+		width: 50px;
+		height: 53px;
 		opacity: 0.9;
+	}
+
+	// .header__text
+	&__text {
+		margin-left: 15px;
+		text-transform: uppercase;
+		white-space: nowrap;
+		font: {
+			size: 36px;
+			weight: 400;
+			family: $font-family-exclude;
+		}
+		color: #cfcdcd;
+		text-shadow: 0 0 3px #000;
+		line-height: 100%;
+		display: flex;
+		align-items: flex-end;
+		transform: translateY(7px);
+
+		span {
+			opacity: 0.7;
+		}
 	}
 
 	// .header__menu
@@ -111,9 +113,7 @@
 		transition: all 0.9s ease 0s;
 		margin: 0 1.5rem;
 		text-transform: uppercase;
-		display: flex;
 		align-items: flex-start;
-		transform: translateY(7px);
 
 		.icon-home {
 			&::before {
@@ -128,7 +128,6 @@
 		cursor: pointer;
 		position: relative;
 		text-shadow: 1px 1px 2px #000;
-
 		&:not(:last-child) {
 			margin-right: 2rem;
 		}
@@ -136,10 +135,6 @@
 		&:hover {
 			color: $neon-blue;
 			text-shadow: 2px 2px 3px #000;
-
-			a {
-				opacity: 1;
-			}
 
 			.icon-home {
 				&::before {
@@ -149,28 +144,45 @@
 			}
 		}
 
-		&.active {
-			color: $neon-blue;
-			text-shadow: 2px 2px 3px #000;
-
+		.icon-home {
 			&::before {
-				width: 75%;
+				transition: all 0.4s ease 0s;
+				text-shadow:
+					0px 0px 15px #000000,
+					0 0 1em #000,
+					0 0 0.2em blue;
 			}
+		}
+	}
+
+	// .header__link-key
+	&__link-key {
+		@extend .link_underline;
+		span {
+			text-shadow:
+				0px 0px 15px #000000,
+				0 0 1em #000,
+				0 0 0.2em blue;
+		}
+		&:not(:first-child) {
+			opacity: 1;
+		}
+		&:hover {
+			color: $neon-blue;
+
+			a {
+				opacity: 1;
+			}
+		}
+
+		&._active {
+			color: $neon-blue;
 
 			.icon-home {
 				&::before {
 					color: $neon-blue;
 				}
 			}
-
-			&::after {
-				width: 40%;
-			}
-		}
-
-		&:not(:first-child) {
-			opacity: 1;
-			@extend .link_underline;
 		}
 	}
 
@@ -183,7 +195,9 @@
 .el-community {
 	// .el-community__phone
 	&__phone {
-		@include flex-align-center;
+		display: flex;
+		align-items: center;
+		// transform: translateY(9px);
 	}
 
 	.icon-phone-ringing {
@@ -191,8 +205,13 @@
 		color: $electric-lime;
 		margin-right: 1rem;
 		text-shadow: 1px 1px 3px #000;
+
 		&:hover {
 			color: $neon-blue;
+		}
+
+		@include screen-425 {
+			margin-right: 0;
 		}
 	}
 
@@ -201,7 +220,8 @@
 		color: #d4d4d4;
 		text-shadow: 1px 0 2px #000;
 		line-height: 100%;
-		@include _425 {
+
+		@include screen-425 {
 			display: none;
 		}
 	}
@@ -211,16 +231,19 @@
 		text-transform: uppercase;
 		font-size: 1rem;
 	}
+
 	span {
 		font-size: 1.2rem;
 		color: $neon-blue;
 	}
 }
+
 @keyframes fadeOutGradient {
 	100% {
 		background-position: 100% 0;
 	}
 }
+
 @keyframes fadeInGradient {
 	100% {
 		background-position: 100% 0;
